<resources>
    <string name="app_name">Smart Irrigation</string>
    <string name="digite_email">Digite seu email</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="botao_logar">Logar</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_email">Confirme seu email</string>
    <string name="confirm_senha">Confirme sua senha</string>
    <string name="register">Registrar</string>
    <string name="esqueceu">Esqueceu sua senha?</string>
    <string name="enviar">Enviar</string>
    <string name="digite">Digite o código enviado por email</string>
    <string name="confirmar">Confirmar</string>
    <string name="nome">Digite o novo nome</string>
    <string name="salvar">Salvar</string>
    <string name="name">Digite seu nome</string>
</resources>
